# tyl

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  README.md  WORKSPACE  engine.cpp  main.cpp  map-generator.cpp
OLD/audio/include/: device.hpp  typedef.hpp
OLD/common/async/: BUILD
OLD/common/math/: BUILD
OLD/common/reflection/: BUILD
OLD/common/utility/: BUILD
OLD/engine/graphics/: BUILD
OLD/engine/widgets/: BUILD
OLD/graphics/test/: texture-image.cpp
OLD/serialization/: BUILD  object.hpp  serialization.hpp
bazel/: test_rules.bzl
core/async/: BUILD
core/async/include/: async.hpp
core/audio/: BUILD
core/audio/host/: BUILD
core/audio/include/: sound.hpp
core/audio/test/: BUILD  play_sound.cpp
core/common/: BUILD
core/common/include/: assert.hpp  bits.hpp  clock.hpp  dynamic_bitset.hpp  expected.hpp  format.hpp
core/ecs/: BUILD
core/ecs/include/: ecs.hpp
core/graphics/device/: BUILD
core/graphics/host/: BUILD
core/math/: BUILD
core/math/include/: rect.hpp  size.hpp
core/serialization/: BUILD  object_fwd.hpp  serialization_fwd.hpp
core/serialization/archive/: BUILD
core/serialization/primitives/: BUILD
core/serialization/std/: BUILD
core/serialization/stream/: BUILD
engine/: BUILD  engine.cpp
engine/asset/: BUILD
engine/asset/include/: loading.hpp  serialization.hpp  types.hpp  types_fwd.hpp
engine/asset/src/: loading.cpp  serialization.cpp
engine/common/: BUILD
engine/common/include/: ecs.hpp  math.hpp  resources.hpp  resources_fwd.hpp  shared_state.hpp
engine/components/: BUILD
engine/components/include/: asset.hpp  ecs.hpp
engine/ecs/: BUILD
engine/ecs/include/: serialization.hpp  types.hpp
engine/graphics/: BUILD
engine/graphics/include/: camera.hpp  drawing.hpp  tags.hpp  tile_map.hpp  tile_set.hpp  tileset.hpp
engine/scene/: BUILD
engine/scene/include/: assets.hpp  scene.hpp  tile_map.hpp
engine/scene/src/: assets.cpp  scene.cpp
engine/script/: BUILD
engine/widget/: BUILD
engine/widget/include/: widget.hpp  widget_perf_monitor.hpp  widget_texture_browser.hpp  widget_tileset_creator.hpp
engine/widget/src/: widget.cpp  widget_perf_monitor.cpp  widget_texture_browser.cpp  widget_tileset_creator.cpp
engine/window/: BUILD
engine/window/include/: keyboard.hpp  window.hpp
engine/window/src/: window_glfw.cpp
legacy/graphics/test/: BUILD
lib/actor/: BUILD
lib/actor/include/: actor.hpp  components.hpp  fwd.hpp
lib/actor/src/: actor.cpp
lib/app/: BUILD
lib/app/include/: loop.hpp
lib/app/src/: loop.cpp
lib/audio/: BUILD
lib/common/: BUILD
lib/common/async/: BUILD
lib/common/debug/: BUILD
lib/common/grid/: BUILD
lib/common/include/: alias.hpp  allocator.hpp  array_view.hpp  assert.hpp  bitops.hpp  bits.hpp  components.hpp  debug.hpp  dynamic_bitset.hpp  ecs.hpp  filesystem.hpp  matrix.hpp  memory.hpp  rect.hpp  ref.hpp  reference.hpp  serialization.hpp  strong_alias.hpp  time.hpp  typestr.hpp  vec.hpp
lib/common/math/: BUILD
lib/common/meta/: BUILD
lib/common/std/: BUILD
lib/common/utility/: BUILD
lib/core/engine/: BUILD.bazel
lib/device/audio/: BUILD
lib/device/graphics/: BUILD
lib/ecs/: BUILD
lib/ecs/include/: ecs.hpp  reference.hpp  serialization.hpp
lib/ecs/serial/: reader.hpp  reference.hpp  requirements.hpp  writer.hpp
lib/ecs/src/: load.hpp  save.hpp
lib/ecs/test/: BUILD  serialization.cpp
lib/engine/: BUILD
lib/engine/app/: BUILD
lib/engine/camera/: BUILD
lib/engine/common/: BUILD
lib/engine/core/: BUILD.bazel
lib/engine/core/include/: app.hpp  asset.hpp  clock.hpp  drag_and_drop.hpp  registry.hpp  resource.hpp  resources.hpp
lib/engine/core/src/: app_glfw.cpp  asset.cpp  resource.cpp
lib/engine/graphics/: BUILD
lib/engine/include/: app.hpp  camera.hpp  fwd.hpp  geometry.hpp  state.hpp  tile_map.hpp  tile_map_rendering.hpp  window.hpp
lib/engine/src/: app.cpp  camera.cpp  tile_map.cpp  tile_map_rendering.cpp
lib/engine/tile_map/: BUILD
lib/engine/widgets/: BUILD
lib/game/: BUILD
lib/game/include/: actor.hpp  fwd.hpp  tiled_region.hpp
lib/game/src/: actor.cpp  tiled_region.cpp
lib/graphics/: BUILD
lib/graphics/device/: BUILD
lib/graphics/engine/: BUILD
lib/graphics/host/: BUILD
lib/graphics/include/: animated_sprite.hpp  (+16 more)
lib/logging/: BUILD
lib/platform/: BUILD
lib/render/: BUILD
lib/serialization/: BUILD  object.hpp  serial.hpp
lib/ui/: BUILD
lib/utility/: BUILD
lib/wfc/: BUILD
resources/test/: BUILD
systems/game/: BUILD  main.cpp
systems/graphics/: BUILD
systems/window/: BUILD
tools/: BUILD  editor.cpp
(+518 files in other folders)
