cc_library(
  name="drag_and_drop",
  hdrs=["include/drag_and_drop.hpp"],
  srcs=[],
  strip_include_prefix="include",
  include_prefix="tyl/engine/core",
  deps=["@imgui"],
  visibility=["//visibility:public"]
)

cc_library(
  name="clock",
  hdrs=["include/clock.hpp"],
  srcs=[],
  strip_include_prefix="include",
  include_prefix="tyl/engine/core",
  visibility=["//visibility:public"]
)

cc_library(
  name="asset",
  hdrs=["include/asset.hpp"],
  srcs=["src/asset.cpp"],
  strip_include_prefix="include",
  include_prefix="tyl/engine/core",
  deps=[":resources", "//lib/common/utility:expected", "//lib/graphics/device:device", "//lib/graphics/host:image", ],
  visibility=["//visibility:public"]
)

cc_library(
  name="app",
  hdrs=["include/app.hpp"],
  srcs=["src/app_glfw.cpp"],
  strip_include_prefix="include",
  include_prefix="tyl/engine/core",
  deps=[":clock", ":drag_and_drop", "//lib/common/utility:expected", "//lib/common/utility:entt", "//lib/common/debug:assert", "//lib/common/math:geometry", "//lib/graphics/device/glad:glad", "@glfw", "@imgui",],
  visibility=["//visibility:public"]
)

cc_library(
  name="resources",
  hdrs=["include/resources.hpp", "include/resources_fwd.hpp"],
  srcs=[],
  strip_include_prefix="include",
  include_prefix="tyl/engine/core",
  deps=["//lib/common/async:worker_pool", "@entt",],
  visibility=["//visibility:public"]
)
